# CIETools

./: .gitignore  MANIFEST.in  README.MD  pyproject.toml  requirements.txt  setup.py  srun.py
.github/workflows/: build.yml
cietools/: __init__.py  __init__.pyi
src/cietools/: CMakeLists.txt  cietools.c  cietools.pyi  color_difference.c  color_difference.h  color_structs.h  conversions.c  conversions.h  gradients.c  gradients.h
src/cietools/py_operations/: color_utils.c  color_utils.h  common.c  common.h  delta_e.c  delta_e.h  hsl_conversions.c  hsl_conversions.h  hsv_conversions.c  hsv_conversions.h  lab_conversions.c  lab_conversions.h  lch_conversions.c  lch_conversions.h  oklab_conversions.c  oklab_conversions.h  oklch_conversions.c  oklch_conversions.h  rgb_conversions.c  rgb_conversions.h  xyz_conversions.c  xyz_conversions.h
src/tests/: test_conversions.py
tests/: test_all.py
