[build-system]
requires = ["setuptools", "wheel"]
build-backend = ""

[project]
name = "cietools"
version = "0.1.0"
description = "A C-based python library to convert CIE formats/calculate Delta E"
readme = "README.md"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "ItzSkyReed" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]
requires-python = ">= 3.13"

[project.urls]
Homepage = "https://github.com/ItzSkyReed/CIETools"