[build-system]
requires = ["setuptools", "wheel"]
build-backend = ""

[tool.setuptools]
license-files = [ "LICENSE" ]

[project]
name = "cietools"
version = "0.3.0"
description = "A C-based python library to convert CIE formats/calculate Delta E"
readme = "README.md"
license = { text = "CC-BY-4.0" }
dependencies = [
    "wheel",
    "setuptools"
]
authors = [
    { name = "ItzSkyReed" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]
requires-python = ">= 3.13"

[project.urls]
Homepage = "https://github.com/ItzSkyReed/CIETools"